# shellber

./: .gitignore  Cargo.toml  README.md
examples/stats_plugin/: Cargo.toml
examples/stats_plugin/src/: lib.rs
plugin_sdk/: Cargo.toml
plugin_sdk/src/: lib.rs
src/: errors.rs  lib.rs  main.rs
src/application/: alias_service.rs  connection_service.rs  mod.rs  plugin_service.rs  profile_service.rs  ssh_config_service.rs  update_service.rs
src/domain/: events.rs  mod.rs  models.rs  plugin.rs  services.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: file_alias_repository.rs  file_history_repository.rs  file_plugin_repository.rs  file_profile_repository.rs  mod.rs  ssh_config_repository.rs
src/infrastructure/ssh/: mod.rs  thrush_ssh_service.rs
src/interface/: mod.rs
src/interface/cli/: commands.rs  handler.rs  mod.rs
src/utils/: file_locks.rs  fs.rs  mod.rs  plugin_security.rs  system_requirements.rs
tests/: cli_tests.rs  plugin_tests.rs
